--- a/static/sass/index.scss
+++ b/static/sass/index.scss
@@ -671,10 +671,13 @@ body {
             // background-color: #303030;
             color: #000;
 
-            p,
             a {
-                text-decoration: none;
                 color: #000;
+                font-weight: 600;
+            }
+
+            p {
+                color: #000000cc;
             }
         }
     }
